--- a/app/package.json
+++ b/app/package.json
@@ -5,5 +5,8 @@
   "dependencies": {
     "grunt": "",
     "grunt-contrib-concat": ">= 0.3.0"
+  },
+  "devDependencies": {
+    "grunt-shell": "~0.2.2"
   }
 }
